--- a/app/src/main/res/layout/activity_option_list.xml
+++ b/app/src/main/res/layout/activity_option_list.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:padding="10dp"
         android:text="Question"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent" />
